PROJECT(LBFGS)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_DEFINITIONS(-DHAVE_CONFIG_H)

SET(PACKAGE "liblbfgs")
SET(PACKAGE_BUGREPORT "https://github.com/chokkan/liblbfgs/issues")

SET (INSTALL_BIN_DIR bin)
SET (INSTALL_LIB_DIR lib${LIB_SUFFIX})
SET (INSTALL_INCLUDE_DIR include)

SET(PACKAGE_NAME "liblbfgs")
SET(PACKAGE_VERSION "1.10")
SET(PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}")
SET(OBJDIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}")

# check for prereqs
INCLUDE(CheckIncludeFiles)
INCLUDE(CheckLibraryExists)

# check headers
CHECK_INCLUDE_FILES(float.h     HAVE_FLOAT_H)
CHECK_INCLUDE_FILES(limits.h    HAVE_LIMITS_H)
CHECK_INCLUDE_FILES(sys/stat.h  HAVE_SYS_STAT_H)
CHECK_INCLUDE_FILES(sys/types.h HAVE_SYS_TYPES_H)
CHECK_INCLUDE_FILES(values.h    HAVE_VALUES_H)
CHECK_INCLUDE_FILES(unistd.h    HAVE_UNISTD_H)
CHECK_INCLUDE_FILES(memory.h    HAVE_MEMORY_H)
CHECK_INCLUDE_FILES(math.h      HAVE_MATH_H)
CHECK_INCLUDE_FILES(malloc.h    HAVE_MALLOC_H)
CHECK_INCLUDE_FILES(stdlib.h    HAVE_STDLIB_H)
CHECK_INCLUDE_FILES(inttypes.h  HAVE_INTTYPES_H)
CHECK_INCLUDE_FILES(string.h    HAVE_STRING_H)
CHECK_INCLUDE_FILES(strings.h   HAVE_STRINGS_H)
CHECK_INCLUDE_FILES(emmintrin.h HAVE_EMMINTRIN_H)
CHECK_INCLUDE_FILES(xmmintrin.h HAVE_XMMINTRIN_H)

# check libraries
CHECK_LIBRARY_EXISTS(m sqrt "math.h" HAVE_LIBM)

OPTION(USE_SSE   "Use SSE2-optimized code " OFF)

IF(USE_SSE)
  ADD_DEFINITIONS(-DUSE_SSE)
ENDIF(USE_SSE)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h @ONLY)

INCLUDE_DIRECTORIES(include ${CMAKE_CURRENT_BINARY_DIR})

ADD_SUBDIRECTORY(lib)

ADD_SUBDIRECTORY(sample)

SET(LBFGS_INCLUDE_DIR_CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/include )
SET(LBFGS_LIBRARY_DIR_CONFIG ${CMAKE_CURRENT_BINARY_DIR}/lib)
SET(LBFGS_LIBRARY_CONFIG lbfgs)

IF(HAVE_LIBM)
  SET(LBFGS_LIBRARY_CONFIG ${LBFGS_LIBRARY_CONFIG} m) 
ENDIF(HAVE_LIBM)

configure_file(LIBLBFGSConfig.cmake.in
  ${CMAKE_CURRENT_BINARY_DIR}/LIBLBFGSConfig.cmake @ONLY )

SET(LBFGS_INCLUDE_DIR_CONFIG ${CMAKE_INSTALL_PREFIX}/${INSTALL_INCLUDE_DIR} )
SET(LBFGS_LIBRARY_DIR_CONFIG ${CMAKE_INSTALL_PREFIX}/${INSTALL_LIB_DIR})

configure_file(LIBLBFGSConfig.cmake.in
  ${CMAKE_CURRENT_BINARY_DIR}/CMakeFiles/LIBLBFGSConfig.cmake @ONLY )

INSTALL(FILES include/lbfgs.h
   DESTINATION  ${INSTALL_INCLUDE_DIR} COMPONENT headers )

INSTALL(
  FILES
    ${CMAKE_CURRENT_BINARY_DIR}/CMakeFiles/LIBLBFGSConfig.cmake
  DESTINATION 
    ${INSTALL_LIB_DIR}
  COMPONENT Development)
